<resources>
    <string name="app_name">ToDoKeep</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="plan_name">Plan</string>
    <string name="archive_name">History</string>
    <string name="trash_name">Trash box</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="day_of_week">Day of week</string>
    <string name="title">Title</string>
    <string name="detail">Details</string>
    <string name="all_delete">Delete all cards on this screen</string>
    <string name="dynamic_date">%1$s</string>
    <string name="ad_unit_id">ca-app-pub-2424686289696454/4437831240</string>

    <string name="configuration">Configuration</string>
    <string name="confirmation">Confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="really_delete">Do you really want to delete these?</string>
    <string name="make_plan">Make a plan</string>
    <string name="make">Make</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="about_this_app">About this app</string>
    <string name="thank_you_dl">Thank you for downloading this application！by WatanabeMjk</string>
    <string name="press_again">Press again to finish</string>
    <string name="other">Other</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_content">The privacy policy of this app is from the link below\n
    https://github.com/WatanabeMjk/ToDoKeep/wiki</string>
</resources>
